fix error chmod application.ini && docker images upload

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
 before_script:
   - docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD"
   - git clone http://192.168.1.212:10030/jj/zfaka.git $(pwd)/site
+  - mv $(pwd)/site/conf/application.ini.new $(pwd)/site/conf/application.ini
 
 build-nginx:
   stage: build
   script:
-    - docker build  -f Dockerfile.nginx -t "$DOCKER_USER:nginx" .
+    - docker build  -f Dockerfile.nginx -t "$DOCKER_USER/zfaka:nginx" .
     - docker push "$DOCKER_USER:nginx"
   tags:
     - docker-build
@@ -13,7 +14,7 @@ build-nginx:
 build-php:
   stage: build
   script:
-    - docker build  -f Dockerfile.php -t "$DOCKER_USER:php" .
+    - docker build  -f Dockerfile.php -t "$DOCKER_USER/zfaka:php" .
     - docker push "$DOCKER_USER:php"
   tags:
     - docker-build
